[workspace]
members = ["src/storage", "src/kstd", "src/common/macro"]
resolver = "2"

[workspace.package]
name = "kiwi-rs"
version = "0.1.0"
description = "An enhanced Redis server implemented in Rust"
readme = "README.md"
repository = "https://github.com/arana-db/kiwi-rs"
edition = "2024"

[workspace.lints]
clippy.dbg_macro = "warn"
clippy.implicit_clone = "warn"
clippy.result_large_err = "allow"
clippy.large_enum_variant = "allow"
rust.unknown_lints = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.dependencies]
rocksdb = "0.23.0"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
log = "0.4"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
num_cpus = "1.16"
murmur3 = "0.5"
bytes = "1"
chrono = "0.4.40"
snafu = "0.7"
proc-macro2 = "1.0.66"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

## workspaces members
storage = { path = "src/storage" }
kstd = { path = "src/kstd" }
common-macro = { path = "src/common/macro" }
